--- a/app/src/main/res/layout/activity_description.xml
+++ b/app/src/main/res/layout/activity_description.xml
@@ -12,6 +12,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:id="@+id/imageView"
+        android:scaleType="fitXY"
         android:layout_below="@+id/toolbar"
         android:layout_height="180dp" />
 
